Update css - fix menu on mobile - 2

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -183,12 +183,12 @@
         display: flex;
         position: absolute;
         height: 0;
-        margin-top: 100svh;
+        margin-top: 100lvh;
         overflow: hidden;
     }
 
     .mobile-only-menu li{
-        padding-top: 89lvh;
+        padding-top: 90lvh;
         margin-inline: 3svw;
     }
 
